--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,20 @@
         tools:targetApi="31">
         <activity
             android:name=".SignUpActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".SignInActivity"
-            android:exported="false" />
+            android:exported="false"
+           />
         <activity
             android:name=".HomescreenActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
